--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello bruh</h1>
+    <p>Hello bruh</p>
 </body>
-<script src="script.js"></script>
+<script src="squarecalc.js"></script>
 </html>
